# Triton-Seq

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
benchmarks/results/: agatha_extz.json  hacked_ptx_results.json  logan_scores.json  logan_xdrop.json  our_framework_extz.json  our_framework_extz_OPv4.json  our_framework_extz_test.json  our_framework_xdrop.json  triton_results.json  triton_scores.json
benchmarks/scripts/: [TODO]benchmark_extz_ptx_0820.py  benchmark_extz.py  benchmark_extz_OPv1.py  benchmark_extz_OPv3.py  benchmark_extz_OPv4.py  benchmark_extz_OPv5.py  benchmark_extz_OPv7.py  benchmark_extz_OPv8.py  benchmark_logan.py  run_baseline.py
benchmarks/scripts/0804_ptx_bak/: benchmark_extz_0804.py  ptx_modif.py  smem0.ptx  smem1.ptx  smem3.ptx  smem4.ptx  smem5.ptx  sw_kernel.ptx
compiler/: README.md
datasets/: README.md  generate_scaled.py
datasets/small/: query_small.fa  ref_small.fa
docs/: QUICKSTART.md
docs/paper_notes/: AGAThA_notes.md  DP-HLS_notes.md  Seq_notes.md
experiments/alignment_tools/: README.md
experiments/alignment_tools/test/: new.py  old.py  pairwise_align.py  query.fasta  ref.fasta
experiments/dsl_comparison/: README.md  bench.py  codon_sw.codon  cpu_sw.cpp  cuda_sw.cu  cutile_sw.py  plot.py  tilelang_sw.py  tk_sw.cu  triton_sw.py
experiments/gluon/: framework_api_OPv6.py  framework_api_OPv6_2.py
experiments/ptx_modification/: README.md
experiments/triton_exploration/: 01-learn-triton.py  generate_fasta.py
scripts/: build_triton.sh  setup_env.sh
src/: api.py
src/host/: buffer_manager.py  scheduler.py
src/kernel/: sw_kernel.py
(+305 files in other folders)
